--- a/members/index.html
+++ b/members/index.html
@@ -49,19 +49,7 @@
      <div class="col-xs-12">
        <section>
          <h1><span class="glyphicon glyphicon-user" aria-hidden="true"></span>メンバー</h1>
-         <p>当研究室の関係者 (2017年度以降) をまとめて確認できます．
-
-
-<div class="row">
-  <div class="container">
-    <div class="alert alert-success alert-dismissible">
-      <button class="close" type="button" data-dismiss="alert">×</button>
-      <strong><span class="glyphicon glyphicon-cog"></span>メンテナンス中: </strong>
-      過去メンバーリストのビルド機構は実装中です
-    </div>
-  </div>
-</div>
-</p>
+         <p>当研究室の関係者 (2017年度以降) をまとめて確認できます．</p>
 
          <small class="info"><span class="glyphicon glyphicon-info-sign"></span>情報が更新されない場合はブラウザの強制再読み込み (スーパーリロード) を試してください．</small>
          <div id="erroralert">
@@ -71,6 +59,7 @@
            </div>
          </div>
          <div id="members"></div>
+         <div id="pastmembers"></div>
      </div>
    </div>
 </div>
