--- a/photos/index.html
+++ b/photos/index.html
@@ -41,14 +41,25 @@
 </header>
 
     <div class="container">
-   <div class="row">
-     <div class="col-xs-12">
-       <section>
-         <h1><span class="glyphicon glyphicon-camera" aria-hidden="true"></span>写真</h1>
-         
-       </section>
-     </div>
-   </div>
+  <div class="row">
+    <div class="col-xs-12">
+      <section>
+        <h1><span class="glyphicon glyphicon-camera" aria-hidden="true"></span>写真</h1>
+        <!-- sorry -->
+
+<div class="row">
+  <div class="container">
+    <div class="alert alert-success alert-dismissible">
+      <strong><span class="glyphicon glyphicon-cog"></span>コンテンツの準備中</strong>
+      <p>サイト移行に伴いコンテンツの加筆訂正作業を行っています．しばらくお待ち下さい</p>
+    </div>
+  </div>
+</div>
+
+
+      </section>
+    </div>
+  </div>
 </div>
 
     <hr>
