--- a/publications/index.html
+++ b/publications/index.html
@@ -57,19 +57,14 @@
     <div class="alert alert-success alert-dismissible">
       <button class="close" type="button" data-dismiss="alert">×</button>
       <strong><span class="glyphicon glyphicon-cog"></span>メンテナンス中: </strong>
-      データはすべてダミーで，ビルド機構は実装中です
+      2017年度以前の業績は登録作業中です
     </div>
   </div>
 </div>
 </p>
 
         <small class="info"><span class="glyphicon glyphicon-info-sign"></span>情報が更新されない場合はブラウザの強制再読み込み (スーパーリロード) を試してください．</small>
-        <div id="erroralert">
-          <div class="alert alert-warning">
-            <h4><span class="glyphicon glyphicon-remove"></span>業績リストのビルドができません</h4>
-            <p>お使いのブラウザでJavascriptの実行が許可されているか確認してください．あるいはGitHubリポジトリ <a href="https://github.com/yamaoka-kitaguchi-lab/publications">yamaoka-kitaguchi-lab/publications</a> を直接参照してください．</p>
-          </div>
-        </div>
+        
         <div id="publications" class="no-display">
           <ul class="nav nav-pills nav-justified">
             <li class="active"><a href="#degree" data-toggle="pill">学位論文 Thesis<span class="badge"></span></a></li>
