--- a/welcome/index.html
+++ b/welcome/index.html
@@ -41,60 +41,25 @@
 </header>
 
     <div class="container">
-   <div class="row">
-     <div class="col-xs-12">
-       <section>
-         <h1><span class="glyphicon glyphicon-education" aria-hidden="true"></span>入学希望の方へ</h1>
-         
+  <div class="row">
+    <div class="col-xs-12">
+      <section>
+        <h1><span class="glyphicon glyphicon-education" aria-hidden="true"></span>入学希望の方へ</h1>
+        <!-- sorry -->
 
-<p>当研究室への入学を希望される方は，可能な限り<strong>事前に研究室見学にお越し頂くことをお勧めします</strong>．<br />
-また，当研究室は他大学を卒業された方の受け入れを歓迎しています．</p>
+<div class="row">
+  <div class="container">
+    <div class="alert alert-success alert-dismissible">
+      <strong><span class="glyphicon glyphicon-cog"></span>コンテンツの準備中</strong>
+      <p>サイト移行に伴いコンテンツの加筆訂正作業を行っています．しばらくお待ち下さい</p>
+    </div>
+  </div>
+</div>
 
-<h2 id="admission-policy">Admission Policy</h2>
 
-<ul>
-<li><strong>求める学生像</strong></li>
-<li>山岡先生本人にしっかり書いてもらう．一番大事</li>
-</ul>
-
-<h2 id="大学院入試">大学院入試</h2>
-
-<ul>
-<li>どの系を受験？</li>
-<li>どんな手続きが必要なの？</li>
-</ul>
-
-<h2 id="説明会">説明会</h2>
-
-<ul>
-<li>研究室見学は随時受付中 (事前に教員にアポイントメントを取ってください)</li>
-<li>全体説明会は？</li>
-</ul>
-
-<h2 id="研究テーマ">研究テーマ</h2>
-
-<ul>
-<li>どんな分野に詳しい先生なのか？簡潔に</li>
-<li><strong>何をどのレベルまでやれば卒業・修了できるのか？</strong></li>
-</ul>
-
-<h2 id="年間スケジュール">年間スケジュール</h2>
-
-<ul>
-<li>院試がある人は半年間試験勉強だけしてればいいよ</li>
-<li>冬ゼミあるよ</li>
-<li>ほぼ確実に学会行くよ，春休みは無いよ</li>
-</ul>
-
-<h2 id="卒業後の進路">卒業後の進路</h2>
-
-<ul>
-<li>研究職とかエンジニア職とか？</li>
-</ul>
-
-       </section>
-     </div>
-   </div>
+      </section>
+    </div>
+  </div>
 </div>
 
     <hr>
