--- a/research/index.html
+++ b/research/index.html
@@ -71,16 +71,18 @@
          <a class="footer-link" href="https://www.titech.ac.jp/">東京工業大学</a>
          <a class="footer-link" href="https://www.titech.ac.jp/english/">Tokyo Institute of Technology<br/>(Tokyo Tech)</a>
          <a class="footer-link" href="http://www.gsic.titech.ac.jp/">学術国際情報センター (GSIC)</a>
-       </div>
-       <div class="col-xs-3">
-         <a class="footer-link" href="https://www.titech.ac.jp/education/academic_groups/5th.html">東京工業大学 第5類</a>
          <a class="footer-link" href="https://educ.titech.ac.jp/ict/">東京工業大学 工学院情報通信系</a>
          <a class="footer-link" href="http://www.rakusuikai.jp/">東京工業大学 電気・情報系同窓会 楽水会</a>
        </div>
        <div class="col-xs-3">
-         <a class="footer-link" href="http://www.ieice.org/jpn/">電気情報通信学会 (IEICE)</a>
+         <a class="footer-link" href="http://www.ieice.org/jpn/">電子情報通信学会 (IEICE)</a>
          <a class="footer-link" href="http://www.ieice.org/cs/in/jpn/">情報ネットワーク研究会 (IN)</a>
-         <a class="footer-link" href="http://www.ieice.org/~icn/">情報指向ネットワーク技術特別研究専門委員会 (ICN)</a>
+         <a class="footer-link" href="http://www.ieice.org/cs/ns/jpn/">ネットワークシステム研究会 (NS)</a>
+       </div>
+       <div class="col-xs-3">
+         <a class="footer-link" href="http://www.ieice.org/~icm/jpn/">情報通信マネジメント研究会 (ICM)</a>
+         <a class="footer-link" href="https://www.ieice.org/~mona/ja/">モバイルネットワークとアプリケーション研究会 (MoNA)</a>
+         <a class="footer-link" href="http://www.ieice.org/cs/cq/jpn/">コミュニケーションクオリティ研究会 (CQ)</a>
        </div>
        <div class="col-xs-3">
          <a class="footer-link" href="http://www.nict.go.jp/">独立行政法人情報通信研究機構 (NICT)</a>
