--- a/publications/index.html
+++ b/publications/index.html
@@ -281,7 +281,7 @@
                     <td>小杉山 拓弥</td>
                     <td><a href="http://fsv01.intra.net.ict.e.titech.ac.jp/publications/17301.pdf">A Flow Aggregation Method under Allowable Delay Limitation in SDN</a></td>
                     <td>IEICE Transactions on Communications</td>
-                    <td><span class="label label-success coresearcher-tag-item tag-item">ボスコ・テクノロジーズ</span><span class="label label-success coresearcher-tag-item tag-item">ボ田辺和輝</span><span class="label label-success coresearcher-tag-item tag-item">山岡克式</span></td>
+                    <td><span class="label label-success coresearcher-tag-item tag-item">ボスコ・テクノロジーズ</span><span class="label label-success coresearcher-tag-item tag-item">田辺和輝</span><span class="label label-success coresearcher-tag-item tag-item">山岡克式</span></td>
                     <td>Vol. E101-B, No.3</td>
                     <td>Mar. 2018</td>
                   </tr>
