--- a/research/index.html
+++ b/research/index.html
@@ -92,7 +92,7 @@
      </div>
      <div class="row">
       <div class="col-xs-12">
-        <small id="is-mirror" class="no-display">オリジナルコンテンツは <a href="https://yamaoka-kitaguchi-lab.github.io/">https://yamaoka-kitaguchi-lab.github.io/</a> にあります (commit <a href="https://github.com/yamaoka-kitaguchi-lab/yamaoka-kitaguchi-lab.github.io/commit/69b28d334fe64118548f5c8aea0a59afe1290512" id="commithash" class="commithash">69b28d3</a>)</small>
+        <small id="is-mirror" class="no-display">オリジナルコンテンツは <a href="https://yamaoka-kitaguchi-lab.github.io/">https://yamaoka-kitaguchi-lab.github.io/</a> にあります</small>
         <small class="copyright">©︎  2018 Yamaoka-Kitaguchi Laboratory</small>
       </div>
     </div>
