--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
 <meta name="robots" content="noindex, nofollow">
-<title></title>
+<title>東京工業大学 山岡・北口研究室</title>
 
     
 <link href="/css/bootstrap.min.css" rel="stylesheet">
@@ -48,7 +48,7 @@
   <div class="container">
     <div class="row">
       <div class="col-xs-12 col-md-8">
-        <h1> 山岡・北口研究室</h1>
+        <h1>山岡・北口研究室</h1>
         <p>東京工業大学 工学院情報通信系</p>
         <p><a class="btn btn-primary btn-lg jumbotron-btn bg-transparent no-transition" role="button" href="/welcome/index.html"><span class="glyphicon glyphicon-education" aria-hidden="true"></span>入学希望の方へ</a></p>
       </div>
