Rebasing: Deploy manually
Signed-off-by: mi2428 <mi2428782020@gmail.com>

--- a/access/index.html
+++ b/access/index.html
@@ -5,8 +5,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
-<meta name="robots" content="noindex, nofollow">
-<title>東京工業大学 山岡・北口研究室</title>
+<title></title>
 
     
 <link href="/css/bootstrap.min.css" rel="stylesheet">
@@ -33,7 +32,6 @@
           <li><a class="navbar-link" href="/research/index.html">研究領域</a></li>
           <li><a class="navbar-link" href="/members/index.html">メンバー</a></li>
           <li><a class="navbar-link" href="/publications/index.html">業績</a></li>
-          <li><a class="navbar-link" href="/photos/index.html">写真</a></li>
           <li><a class="navbar-link" href="/news/index.html">ニュース</a></li>
           <li><a class="navbar-link" href="/access/index.html">アクセス</a></li>
         </ul>
@@ -64,10 +62,9 @@
 
 <h2 id="当研究室を卒業された方へ">当研究室を卒業された方へ</h2>
 
-<p>当研究室では2006年度（酒井・山岡研究室）よりOB/OG名簿の整理をはじめました．</p>
-
-<p>OB/OGの方で，卒業時に連絡先を伝えていただけていない方や，その後の連絡先に変更のあった方は，<code>renraku@net.ict.e.</code>までメールにてお申し出ください．
-名簿へ記入をさせて頂き，OB会などがありましたらご連絡を差し上げます．</p>
+<p>当研究室では2006年度（酒井・山岡研究室）よりOB/OG名簿の整理をはじめました．<br />
+OB/OGの方で，卒業時に連絡先を伝えていただけていない方や，その後の連絡先に変更のあった方は，<mark>renraku@</mark>までメールにてお申し出ください．<br />
+名簿へ登録させていただき，OB会などがありましたらご連絡を差し上げます．</p>
 
       </section>
     </div>
@@ -88,13 +85,16 @@
        </div>
        <div class="col-xs-3">
          <a class="footer-link" href="http://www.ieice.org/jpn/">電子情報通信学会 (IEICE)</a>
+         <a class="footer-link" href="https://www.ipsj.or.jp/">情報処理学会 (IPS)</a>
          <a class="footer-link" href="http://www.ieice.org/cs/in/jpn/">情報ネットワーク研究会 (IN)</a>
-         <a class="footer-link" href="http://www.ieice.org/cs/ns/jpn/">ネットワークシステム研究会 (NS)</a>
+         <a class="footer-link" href="http://www.ieice.org/~icm/jpn/">情報通信マネジメント研究会 (ICM)</a>
+         <a class="footer-link" href="http://www.ieice.org/cs/cq/jpn/">コミュニケーションクオリティ研究会 (CQ)</a>
        </div>
        <div class="col-xs-3">
-         <a class="footer-link" href="http://www.ieice.org/~icm/jpn/">情報通信マネジメント研究会 (ICM)</a>
          <a class="footer-link" href="https://www.ieice.org/~mona/ja/">モバイルネットワークとアプリケーション研究会 (MoNA)</a>
-         <a class="footer-link" href="http://www.ieice.org/cs/cq/jpn/">コミュニケーションクオリティ研究会 (CQ)</a>
+         <a class="footer-link" href="https://www.iot.ipsj.or.jp/">インターネットと運用技術研究会 (IOT)</a>
+         <a class="footer-link" href="http://www.wide.ad.jp/">WIDEプロジェクト</a>
+         <a class="footer-link" href="https://www.jsps.go.jp/j-soc/list/163.html">インターネット技術第163委員会</a>
        </div>
        <div class="col-xs-3">
          <a class="footer-link" href="http://www.nict.go.jp/">独立行政法人情報通信研究機構 (NICT)</a>
@@ -104,8 +104,8 @@
      </div>
      <div class="row">
       <div class="col-xs-12">
-        <small id="is-mirror" class="no-display">オリジナルコンテンツは <a href="https://yamaoka-kitaguchi-lab.github.io/">https://yamaoka-kitaguchi-lab.github.io/</a> にあります</small>
-        <small class="copyright">©︎  2018 Yamaoka-Kitaguchi Laboratory</small>
+        <small>We use <a href="https://github.com/yamaoka-kitaguchi-lab/www.net.ict.e.titech.ac.jp">GitHub Pages</a> to host this website.</small>
+        <small class="copyright">&copy; 2019 Yamaoka-Kitaguchi Laboratory</small>
       </div>
     </div>
   </div>
@@ -118,7 +118,7 @@
 
 <script src="/js/common.js"></script>
 
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD2l8KG5SmfwuW2ZtyDjuLl8UGe5cZvXd0"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBq-OQiKy6fAjN0veUsRgqH5yPDyAnUYCU"></script>
 <script src="/js/ggmap.js"></script>
 
   </body>
