--- a/welcome/index.html
+++ b/welcome/index.html
@@ -5,8 +5,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
-<meta name="robots" content="noindex, nofollow">
-<title>東京工業大学 山岡・北口研究室</title>
+<title></title>
 
     
 <link href="/css/bootstrap.min.css" rel="stylesheet">
@@ -31,7 +30,6 @@
           <li><a class="navbar-link" href="/research/index.html">研究領域</a></li>
           <li><a class="navbar-link" href="/members/index.html">メンバー</a></li>
           <li><a class="navbar-link" href="/publications/index.html">業績</a></li>
-          <li><a class="navbar-link" href="/photos/index.html">写真</a></li>
           <li><a class="navbar-link" href="/news/index.html">ニュース</a></li>
           <li><a class="navbar-link" href="/access/index.html">アクセス</a></li>
         </ul>
@@ -45,17 +43,128 @@
     <div class="col-xs-12">
       <section>
         <h1><span class="glyphicon glyphicon-education" aria-hidden="true"></span>入学希望の方へ</h1>
-        <!-- sorry -->
+        
 
-<div class="row">
-  <div class="container">
-    <div class="alert alert-success alert-dismissible">
-      <strong><span class="glyphicon glyphicon-cog"></span>コンテンツの準備中</strong>
-      <p>サイト移行に伴いコンテンツの加筆訂正作業を行っています．しばらくお待ち下さい</p>
+<h2 id="アドミッション-ポリシー">アドミッション・ポリシー</h2>
+
+<p>東京工業大学の<a href="https://www.titech.ac.jp/about/policies/education/admissions.html">入学者受け入れの方針</a>に準じます．<br />
+また当研究室では，企業や官公庁に所属しながら修士号，博士号の取得を目指す，社会人大学院生の受け入れを歓迎しています．</p>
+
+<h2 id="受験方法">受験方法</h2>
+
+<p><a href="https://educ.titech.ac.jp/ict/">工学院情報通信系</a>を受験し，
+<mark><b>山岡克式研究室</b>もしくは<b>北口善明研究室</b>を志望</mark>してください．</p>
+
+<p>当研究室は山岡克式教授と北口善明准教授の共同運営研究室であり，入学試験においてどちらの研究室へ合格となっても，
+その後の研究室生活において一切区別されません．<br />
+つまり，書類上は山岡研究室の所属でありながらも，北口先生の指導を中心に研究活動を進めることができます．
+（ただしこの場合，学位論文の主指導教員は山岡先生になります）</p>
+
+<p><mark><b>入学課程や学内学外を問わず，当研究室への受験を希望される方は，必ず事前に山岡先生もしくは北口先生とご面談ください．</b></mark></p>
+
+<h2 id="研究室生活">研究室生活</h2>
+
+<h3 id="春ゼミ">春ゼミ</h3>
+
+<ul>
+<li>4月に開催する当研究室主催のワークショップです</li>
+<li>新入生，特にB4に向けて，M1が昨年度1年間の研究成果を発表します</li>
+<li>春ゼミ後はそのまま新入生歓迎会を開催します</li>
+</ul>
+
+<h3 id="春旅行">春旅行</h3>
+
+<ul>
+<li>だいたい4月から6月に1泊2日で旅行に行きます</li>
+<li>幹事はB4かM1がやります</li>
+</ul>
+
+<h3 id="本読み輪講">本読み輪講</h3>
+
+<ul>
+<li>ネットワーク各層（物理層からアプリケーション層まで）の理解を深めるため，教科書を輪読します</li>
+<li>B4からDまでの全学生が一人1回，持ち回りでスライドを作成し発表するプレゼン形式です</li>
+<li>1Q2Qの前学期中のみ週1回90分で実施します</li>
+</ul>
+
+<h3 id="通常輪講">通常輪講</h3>
+
+<ul>
+<li>研究進捗を発表し，一人ひとりが抱えている課題を全体で共有します</li>
+<li>スライドは補助的な利用に留め，信学技報（論文）フォーマットで作成した資料を読みながら進めていく形式です</li>
+<li>通年で実施し，全学生が1回90分を一人で担当します．学年ごとに担当回数は異なります</li>
+<li>通常輪講をチェックポイントに，指導教員と相談しながら研究を進めていきます</li>
+</ul>
+
+<h3 id="冬ゼミ">冬ゼミ</h3>
+
+<ul>
+<li>12月に開催する当研究室主催のワークショップです</li>
+<li>M2とDが幹事となり，他大学の先生・学生を招いて，ホテルの会議室を貸し切り1泊2日で実施します</li>
+<li>内輪のイベントですが，発表者のB4とM1は学会発表相当の研究成果を以て臨む必要があります</li>
+<li>冬ゼミ予稿はIEICE総合大会予稿と同一フォーマットであり，特に問題がなければそのまま総合大会へ投稿します</li>
+</ul>
+
+<h3 id="学会発表">学会発表</h3>
+
+<ul>
+<li>研究室1年目のB4やM1も，順調に研究が進めば2月までに国内学会（電子情報通信学会や情報処理学会など）に論文を投稿します</li>
+<li>3月はこれら国内学会の発表とともに，引き続き研究室に残るB4とM1は，国際学会に投稿する英語論文を執筆します</li>
+</ul>
+
+<h2 id="居室の設備">居室の設備</h2>
+
+<p>南3号館301号室と313号室が学生室，302号室がリフレッシュルーム，303号室がサーバルーム兼ミーティングスペースになっています．<br />
+すべての学生にはブース型デスクとデスクトップPC，2枚のディスプレイが貸与されます．</p>
+
+<div id="welcome-carousel" class="carousel slide" data-ride="carousel">
+  <ol class="carousel-indicators">
+    <li data-target="#welcome-carousel" data-slide-to="0" class="active"></li>
+    <li data-target="#welcome-carousel" data-slide-to="1"></li>
+    <li data-target="#welcome-carousel" data-slide-to="2"></li>
+    <li data-target="#welcome-carousel" data-slide-to="3"></li>
+    <li data-target="#welcome-carousel" data-slide-to="4"></li>
+    <li data-target="#welcome-carousel" data-slide-to="5"></li>
+    <li data-target="#welcome-carousel" data-slide-to="6"></li>
+    <li data-target="#welcome-carousel" data-slide-to="7"></li>
+    <li data-target="#welcome-carousel" data-slide-to="8"></li>
+  </ol>
+  <div class="carousel-inner" role="listbox">
+    <div class="item active">
+      <img src="0.jpg">
+    </div>
+    <div class="item">
+      <img src="1.jpg">
+    </div>
+    <div class="item">
+      <img src="2.jpg">
+    </div>
+    <div class="item">
+      <img src="3.jpg">
+    </div>
+    <div class="item">
+      <img src="4.jpg">
+    </div>
+    <div class="item">
+      <img src="5.jpg">
+    </div>
+    <div class="item">
+      <img src="6.jpg">
+    </div>
+    <div class="item">
+      <img src="7.jpg">
+    </div>
+    <div class="item">
+      <img src="8.jpg">
     </div>
   </div>
+  <a class="left carousel-control" href="#welcome-carousel" role="button" data-slide="prev">
+    <span class="sr-only">前へ</span>
+  </a>
+  <a class="right carousel-control" href="#welcome-carousel" role="button" data-slide="next">
+    <span class="sr-only">次へ</span>
+  </a>
 </div>
-
 
       </section>
     </div>
@@ -76,13 +185,16 @@
        </div>
        <div class="col-xs-3">
          <a class="footer-link" href="http://www.ieice.org/jpn/">電子情報通信学会 (IEICE)</a>
+         <a class="footer-link" href="https://www.ipsj.or.jp/">情報処理学会 (IPS)</a>
          <a class="footer-link" href="http://www.ieice.org/cs/in/jpn/">情報ネットワーク研究会 (IN)</a>
-         <a class="footer-link" href="http://www.ieice.org/cs/ns/jpn/">ネットワークシステム研究会 (NS)</a>
+         <a class="footer-link" href="http://www.ieice.org/~icm/jpn/">情報通信マネジメント研究会 (ICM)</a>
+         <a class="footer-link" href="http://www.ieice.org/cs/cq/jpn/">コミュニケーションクオリティ研究会 (CQ)</a>
        </div>
        <div class="col-xs-3">
-         <a class="footer-link" href="http://www.ieice.org/~icm/jpn/">情報通信マネジメント研究会 (ICM)</a>
          <a class="footer-link" href="https://www.ieice.org/~mona/ja/">モバイルネットワークとアプリケーション研究会 (MoNA)</a>
-         <a class="footer-link" href="http://www.ieice.org/cs/cq/jpn/">コミュニケーションクオリティ研究会 (CQ)</a>
+         <a class="footer-link" href="https://www.iot.ipsj.or.jp/">インターネットと運用技術研究会 (IOT)</a>
+         <a class="footer-link" href="http://www.wide.ad.jp/">WIDEプロジェクト</a>
+         <a class="footer-link" href="https://www.jsps.go.jp/j-soc/list/163.html">インターネット技術第163委員会</a>
        </div>
        <div class="col-xs-3">
          <a class="footer-link" href="http://www.nict.go.jp/">独立行政法人情報通信研究機構 (NICT)</a>
@@ -92,8 +204,8 @@
      </div>
      <div class="row">
       <div class="col-xs-12">
-        <small id="is-mirror" class="no-display">オリジナルコンテンツは <a href="https://yamaoka-kitaguchi-lab.github.io/">https://yamaoka-kitaguchi-lab.github.io/</a> にあります</small>
-        <small class="copyright">©︎  2018 Yamaoka-Kitaguchi Laboratory</small>
+        <small>We use <a href="https://github.com/yamaoka-kitaguchi-lab/www.net.ict.e.titech.ac.jp">GitHub Pages</a> to host this website.</small>
+        <small class="copyright">&copy; 2019 Yamaoka-Kitaguchi Laboratory</small>
       </div>
     </div>
   </div>
