--- a/welcome/index.html
+++ b/welcome/index.html
@@ -7,6 +7,13 @@
 
 <title></title>
 
+    <meta property="og:url" content="https://www.net.ict.e.titech.ac.jp/welcome">
+<meta property="og:type" content="article">
+<meta property="og:title" content="入学希望の方へ">
+<meta property="og:description" content="当研究室では社会人大学院生の受け入れを歓迎しています">
+<meta property="og:site_name" content="東京工業大学 山岡・北口研究室">
+<meta property="og:image" content="/image/titech-logo.jpg">
+
     
 <link href="/css/bootstrap.min.css" rel="stylesheet">
 
