--- a/welcome/index.html
+++ b/welcome/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="shortcut icon" type="image/x-icon" href="/image/titech-favicon.ico">
 
 <title></title>
 
@@ -12,7 +13,8 @@
 <meta property="og:title" content="入学希望の方へ">
 <meta property="og:description" content="当研究室では社会人大学院生の受け入れを歓迎しています">
 <meta property="og:site_name" content="東京工業大学 山岡・北口研究室">
-<meta property="og:image" content="/image/titech-logo.jpg">
+<meta property="og:image" content="/image/OGP.jpg">
+<meta name="twitter:card" content="summary_large_image">
 
     
 <link href="/css/bootstrap.min.css" rel="stylesheet">
