Manual deploy (OGP)
Signed-off-by: mi2428 <mi2428782020@gmail.com>

--- a/access/index.html
+++ b/access/index.html
@@ -8,6 +8,14 @@
 
 <title></title>
 
+    <meta property="og:url" content="https://www.net.ict.e.titech.ac.jp/access">
+<meta property="og:type" content="article">
+<meta property="og:title" content="アクセス">
+<meta property="og:description" content="大岡山キャンパス 南3号館3階301室（03-5734-3763）">
+<meta property="og:site_name" content="東京工業大学 山岡・北口研究室">
+<meta property="og:image" content="https://www.net.ict.e.titech.ac.jp/image/OGP.jpg">
+<meta name="twitter:card" content="summary_large_image">
+
     
 <link href="/css/bootstrap.min.css" rel="stylesheet">
 
