--- a/index.html
+++ b/index.html
@@ -9,6 +9,14 @@
 
 <title></title>
 
+    <meta property="og:url" content="https://www.net.ict.e.titech.ac.jp/">
+<meta property="og:type" content="website">
+<meta property="og:title" content="ネットワーク第2層から第6層まで">
+<meta property="og:description" content="当研究室では、インターネットをはじめとした情報通信ネットワークを対象として、ネットワーク制御技術および通信用マルチメディア処理技術を、理論と実装の両面から研究しています。">
+<meta property="og:site_name" content="東京工業大学 山岡・北口研究室">
+<meta property="og:image" content="https://www.net.ict.e.titech.ac.jp/image/OGP.jpg">
+<meta name="twitter:card" content="summary_large_image">
+
     
 <link href="/css/bootstrap.min.css" rel="stylesheet">
 
