--- a/members/index.html
+++ b/members/index.html
@@ -8,6 +8,14 @@
 
 <title></title>
 
+    <meta property="og:url" content="https://www.net.ict.e.titech.ac.jp/members">
+<meta property="og:type" content="article">
+<meta property="og:title" content="メンバー">
+<meta property="og:description" content="2017年度以降の当研究室の関係者（教職員・学生・卒業生・留学生）をまとめてあります。">
+<meta property="og:site_name" content="東京工業大学 山岡・北口研究室">
+<meta property="og:image" content="https://www.net.ict.e.titech.ac.jp/image/OGP.jpg">
+<meta name="twitter:card" content="summary_large_image">
+
     
 <link href="/css/bootstrap.min.css" rel="stylesheet">
 
