--- a/publications/index.html
+++ b/publications/index.html
@@ -8,6 +8,14 @@
 
 <title></title>
 
+    <meta property="og:url" content="https://www.net.ict.e.titech.ac.jp/publications">
+<meta property="og:type" content="article">
+<meta property="og:title" content="業績">
+<meta property="og:description" content="当研究室の学生による研究成果（学位論文・学会誌論文・雑誌論文）をまとめてあります。">
+<meta property="og:site_name" content="東京工業大学 山岡・北口研究室">
+<meta property="og:image" content="https://www.net.ict.e.titech.ac.jp/image/OGP.jpg">
+<meta name="twitter:card" content="summary_large_image">
+
     
 <link href="/css/bootstrap.min.css" rel="stylesheet">
 
