--- a/members/index.html
+++ b/members/index.html
@@ -6,7 +6,6 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="shortcut icon" type="image/x-icon" href="/image/titech-favicon.ico">
 
-<title></title>
 
     <meta property="og:url" content="https://www.net.ict.e.titech.ac.jp/members">
 <meta property="og:type" content="article">
@@ -15,6 +14,8 @@
 <meta property="og:site_name" content="東京工業大学 山岡・北口研究室">
 <meta property="og:image" content="https://www.net.ict.e.titech.ac.jp/image/OGP.jpg">
 <meta name="twitter:card" content="summary_large_image">
+
+<title>メンバー | 東京工業大学 山岡・北口研究室</title>
 
     
 <link href="/css/bootstrap.min.css" rel="stylesheet">
