Manual deploy (hugo-theme update #7)
Signed-off-by: mi2428 <mi2428782020@gmail.com>

--- a/members/index.html
+++ b/members/index.html
@@ -80,6 +80,7 @@
          </div>
          <div id="members"></div>
          <div id="pastmembers"></div>
+         <div id="pastexchangestudents"></div>
      </div>
    </div>
    <div class="row">
